@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<description>Standard Document Module labels</description>
+		<type>module</type>
+		<fileId>EXT:opendocs/locallang_opendocs.xml</fileId>
+		<labelContext type="array">
+		</labelContext>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="toolbaritem">Open and Recently Edited Documents</label>
+			<label index="open_docs">Opened Documents</label>
+			<label index="recent_docs">Recently Edited Documents</label>
+			<label index="no_docs">There are no open documents</label>
+		</languageKey>
+	</data>
+</T3locallang>
