@@ -1,5 +1,7 @@
 2008-02-03  Benjamin Mack  <mack@xnos.org>
 
+	* Added "Open Documents" menu in top bar of new BE, made module
+	optional
 	* Followup to #7361: Save button was moved to bottom again
 	* Followup to #7361: One CSH was still on the wrong line
 	* Fixed #7361: Overhauled User setup module. Now has tabs and better usability, thanks to Steffen Kamper
